[package]
name = "drop"
version = "0.1.0"
authors = [ "Ogier Bouvier <ogier.bouvier@epfl.ch", "Matteo Monti <matteo.monti@epfl.ch>" ]
edition = "2018"

[dependencies]
drop-derive = { path = "drop-derive" }
sodiumoxide = "0.2"
snafu = "~0.6"
serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = "~1.3"
tokio = { version = "~0.2", features = [ "net", "rt-util", "stream" ], optional = true }
tokio-utp = { version = "0.8.0-alpha1", branch = "async", git = "https://github.com/Distributed-EPFL/tokio-utp", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.1", optional = true }
peroxide = { version = "0.27", optional = true }

[dev-dependencies]
rand = "0.6.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.1"

[features]
default = []
test = [ "system", "tracing-subscriber" ]
net = [ "tokio", "futures", "async-trait", "tracing", "tracing-futures", "tokio-utp" ]
system = [ "peroxide", "net" ]

