[package]
name = "drop"
version = "0.1.0"
authors = [ "Ogier Bouvier <ogier@bouvier.family", "Matteo Monti <matteo.monti@epfl.ch>" ]
edition = "2018"
homepage = "https://github.com/Distributed-EPFL/drop"
repository = "https://github.com/Distributed-EPFL/drop"
documentation = "https://docs.rs/drop/0.1.0/drop"
description="""
An asynchronous framework for the development of distributed systems
"""
categories = [ "asynchronous", "network", "distributed-systems", "cryptography" ]
keywords = [ "distributed", "async", "crypto" ]
readme="README.md"

[dependencies]
drop-derive = { version = "0.1.0" }
sodiumoxide = "0.2"
snafu = "~0.6"
serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = "~1.3"
backoff = { version = "0.3", features = ["tokio"] }
tokio = { version = "1", features = [ "net", "sync", "rt", "io-util", "time" ], optional = true }
async-utp = { version = "0.8.0-alpha1", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.1", optional = true }
peroxide = { version = "0.30", optional = true }
postage = { version = "0.4", features = [ "logging", "futures-traits" ] }

# pending inclusion of stream in std
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
rand = "0.8"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.1"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
drop = { path = ".", features = [ "system" ] }

[features]
default = []
test = [ "system", "tracing-subscriber" ]
net = [ "tokio", "futures", "async-trait", "tracing", "tracing-futures" ]
system = [ "peroxide", "net" ]

# These features are not quite stable yet and should be enabled with care
unstable = [ "net", "async-utp" ]
