[package]
name = "drop"
version = "0.1.0"
authors = [ "Ogier Bouvier <ogier@bouvier.family", "Matteo Monti <matteo.monti@epfl.ch>" ]
edition = "2018"
homepage = "https://github.com/Distributed-EPFL/drop"
repository = "https://github.com/Distributed-EPFL/drop"
documentation = "https://docs.rs/drop/0.1.0/drop"
license = "AGPL-3.0-or-later"
description="""
An asynchronous framework for the development of distributed systems
"""
categories = [ "asynchronous", "network", "distributed-systems", "cryptography" ]
keywords = [ "distributed", "async", "crypto" ]
readme="README.md"
resolver = "2"

[dependencies]
async-trait = { version = "0.1", optional = true }
async-utp = { version = "0.8.0-alpha1", optional = true }
backoff = { version = "0.3", features = ["tokio"] }
bincode = "~1.3"
blake3 = "1"
blst = { version = "0.3", optional = true }
crypto_kx = { version = "0.0.1", features = ["serde"] }
crypto_secretstream = "0.0.1"
drop-derive = { version = "0.1.0" }
ed25519-dalek = { version = "1", features = [ "serde" ] }
futures = { version = "0.3", optional = true }
hex = "0.4"
peroxide = { version = "0.30", optional = true }
postage = { version = "0.4", features = [ "logging", "futures-traits" ] }
rand = "0.8"
serde = { version = "~1.0", features = [ "derive", "rc" ] }
snafu = "~0.6"
tokio = { version = "1", features = [ "net", "sync", "rt", "io-util", "time" ], optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }

# pending inclusion of stream in std
async-stream = "0.3"
tokio-stream = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
drop = { path = ".", features = [ "system" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"

[features]
default = []
test = [ "system", "tracing-subscriber" ]
net = [ "tokio", "futures", "async-trait", "tracing", "tracing-futures" ]
system = [ "peroxide", "net" ]

# These features are not quite stable yet and should be enabled with care
unstable = [ "net", "async-utp" ]
