[package]
name = "drop-derive"
version = "0.1.0"
authors = ["Ogier Bouvier <ars3nic@ars3nic.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "derive" ] }
quote = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

[lib]
proc-macro = true
