[package]
name = "connections"
version = "0.0.1"
authors = [ "Ogier Bouvier <ogier@bouvier.family>" ]
edition = "2018"

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "net" ] }
futures = "0.3"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
